--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "1.0.5",
+	"version": "1.1.0-alpha.1",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -63,7 +63,7 @@
 			[
 				"@babel/preset-env",
 				{
-						"targets": "maintained node versions"
+					"targets": "maintained node versions"
 				}
 			]
 		],
