--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
 		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "1.0.5",
+	"version": "1.1.0-alpha.1",
 	"main": "./dist/index.js",
 	"engines": {
-		"node": ">=12"
+		"node": ">=18"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -34,19 +34,19 @@
 	},
 	"dependencies": {
 		"@natlibfi/fixugen": "^1.1.0",
-		"@natlibfi/fixura": "^2.2.1",
+		"@natlibfi/fixura": "^2.2.5",
 		"chai-http": "^4.3.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.18.10",
-		"@babel/core": "^7.18.13",
-		"@babel/eslint-parser": "^7.18.9",
-		"@babel/node": "^7.18.10",
-		"@babel/preset-env": "^7.18.10",
+		"@babel/cli": "^7.20.7",
+		"@babel/core": "^7.20.12",
+		"@babel/eslint-parser": "^7.19.1",
+		"@babel/node": "^7.20.7",
+		"@babel/preset-env": "^7.20.2",
 		"@babel/register": "^7.18.9",
-		"@natlibfi/eslint-config-melinda-backend": "^2.0.1",
+		"@natlibfi/eslint-config-melinda-backend": "^2.0.2",
 		"babel-plugin-istanbul": "^6.1.1",
-		"chai": "^4.3.6",
+		"chai": "^4.3.7",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.23.0",
 		"express": "^4.18.1",
@@ -63,9 +63,7 @@
 			[
 				"@babel/preset-env",
 				{
-					"targets": {
-						"node": "12"
-					}
+					"targets": "maintained node versions"
 				}
 			]
 		],
