--- a/package.json
+++ b/package.json
@@ -35,25 +35,25 @@
 	},
 	"dependencies": {
 		"@natlibfi/fixugen": "^1.1.0",
-		"@natlibfi/fixura": "^2.2.5",
+		"@natlibfi/fixura": "^3.0.0-alpha.1",
 		"chai-http": "^4.3.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.20.7",
-		"@babel/core": "^7.20.12",
+		"@babel/cli": "^7.21.0",
+		"@babel/core": "^7.21.0",
 		"@babel/eslint-parser": "^7.19.1",
 		"@babel/node": "^7.20.7",
 		"@babel/preset-env": "^7.20.2",
-		"@babel/register": "^7.18.9",
+		"@babel/register": "^7.21.0",
 		"@natlibfi/eslint-config-melinda-backend": "^2.0.2",
 		"babel-plugin-istanbul": "^6.1.1",
 		"chai": "^4.3.7",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.23.0",
-		"express": "^4.18.1",
-		"mocha": "^10.0.0",
-		"node-fetch": "^2.6.7",
-		"nodemon": "^2.0.19",
+		"eslint": "^8.36.0",
+		"express": "^4.18.2",
+		"mocha": "^10.2.0",
+		"node-fetch": "^2.6.9",
+		"nodemon": "^2.0.21",
 		"nyc": "^15.0.1"
 	},
 	"eslintConfig": {
