--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "1.1.1",
-	"main": "./dist/index.js",
+	"version": "1.1.2-alpha.3",
+	"main": "dist/index.js",
 	"engines": {
 		"node": ">=18"
 	},
@@ -23,6 +23,7 @@
 		"access": "public"
 	},
 	"scripts": {
+		"prepare": "npm run build",
 		"lint": "eslint src",
 		"lint:dev": "eslint --fix src",
 		"test:base": "cross-env NODE_ENV=test nyc mocha --require @babel/register",
@@ -34,25 +35,25 @@
 	},
 	"dependencies": {
 		"@natlibfi/fixugen": "^1.1.0",
-		"@natlibfi/fixura": "^2.2.5",
+		"@natlibfi/fixura": "^3.0.0-alpha.1",
 		"chai-http": "^4.3.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.20.7",
-		"@babel/core": "^7.20.12",
+		"@babel/cli": "^7.21.0",
+		"@babel/core": "^7.21.0",
 		"@babel/eslint-parser": "^7.19.1",
 		"@babel/node": "^7.20.7",
 		"@babel/preset-env": "^7.20.2",
-		"@babel/register": "^7.18.9",
+		"@babel/register": "^7.21.0",
 		"@natlibfi/eslint-config-melinda-backend": "^2.0.2",
 		"babel-plugin-istanbul": "^6.1.1",
 		"chai": "^4.3.7",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.23.0",
-		"express": "^4.18.1",
-		"mocha": "^10.0.0",
-		"node-fetch": "^2.6.7",
-		"nodemon": "^2.0.19",
+		"eslint": "^8.36.0",
+		"express": "^4.18.2",
+		"mocha": "^10.2.0",
+		"node-fetch": "^2.6.9",
+		"nodemon": "^2.0.21",
 		"nyc": "^15.0.1"
 	},
 	"eslintConfig": {
