--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "1.1.5",
+	"version": "1.1.6-alpha.1",
 	"main": "dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -34,26 +34,26 @@
 		"watch:test": "cross-env DEBUG=1 NODE_ENV=test nodemon -w src -w test-fixtures --exec 'npm run test:dev'"
 	},
 	"dependencies": {
-		"@natlibfi/fixugen": "^2.0.0",
-		"@natlibfi/fixura": "^3.0.0",
+		"@natlibfi/fixugen": "^2.0.1",
+		"@natlibfi/fixura": "^3.0.1",
 		"chai-http": "^4.4.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.22.5",
-		"@babel/core": "^7.22.5",
-		"@babel/eslint-parser": "^7.22.5",
-		"@babel/node": "^7.22.5",
-		"@babel/preset-env": "^7.22.5",
+		"@babel/cli": "^7.22.9",
+		"@babel/core": "^7.22.9",
+		"@babel/eslint-parser": "^7.22.9",
+		"@babel/node": "^7.22.6",
+		"@babel/preset-env": "^7.22.9",
 		"@babel/register": "^7.22.5",
-		"@natlibfi/eslint-config-melinda-backend": "^2.0.2",
+		"@natlibfi/eslint-config-melinda-backend": "^3.0.0",
 		"babel-plugin-istanbul": "^6.1.1",
 		"chai": "^4.3.7",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.43.0",
+		"eslint": "^8.45.0",
 		"express": "^4.18.2",
 		"mocha": "^10.2.0",
-		"node-fetch": "^2.6.11",
-		"nodemon": "^2.0.22",
+		"node-fetch": "^2.6.12",
+		"nodemon": "^3.0.1",
 		"nyc": "^15.1.0"
 	},
 	"eslintConfig": {
