--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"lint:dev": "eslint --fix ./src",
 		"test": "npm run lint && npm run test:base",
 		"test:base": "cross-env NODE_ENV=test nyc mocha --package ./package.json",
-		"test:dev": "npm run lint:dev && npm run test:base && npm run coverage",
+		"test:dev": "npm run lint:dev && npm run test:base",
 		"coverage": "nyc check-coverage --per-file",
 		"watch:test": "cross-env DEBUG=@natlibfi/* NODE_ENV=test nodemon",
 		"dev": "nodemon",
