--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
 	},
 	"license": "LGPL-3.0+",
-	"version": "1.1.8",
+	"version": "1.1.9-alpha.1",
 	"main": "dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -78,38 +78,38 @@
 		}
 	},
 	"mocha": {
-	  "spec": [
-		"src/*.spec.js",
-		"src/**/*.spec.js"
-	  ],
-	  "require": [
-		"@babel/register"
-	  ],
-	  "inline-diffs": true,
-	  "maxDiffSize": 25000,
-	  "bail": true,
-	  "exit": true
+		"spec": [
+			"src/*.spec.js",
+			"src/**/*.spec.js"
+		],
+		"require": [
+			"@babel/register"
+		],
+		"inline-diffs": true,
+		"maxDiffSize": 25000,
+		"bail": true,
+		"exit": true
 	},
 	"nodemonConfig": {
-	  "exec": "npm run test:dev",
-	  "watch": [
-		"src/*",
-		"test-fixtures/*"
-	  ]
+		"exec": "npm run test:dev",
+		"watch": [
+			"src/*",
+			"test-fixtures/*"
+		]
 	},
 	"nyc": {
-	  "exclude": [
-		"src/*.spec.js",
-		"src/**/*.spec.js"
-	  ],
-	  "reporter": [
-		"text"
-	  ],
-	  "sourceMap": false,
-	  "instrument": false,
-	  "lines": 80,
-	  "statements": 80,
-	  "functions": 80,
-	  "branches": 80
+		"exclude": [
+			"src/*.spec.js",
+			"src/**/*.spec.js"
+		],
+		"reporter": [
+			"text"
+		],
+		"sourceMap": false,
+		"instrument": false,
+		"lines": 80,
+		"statements": 80,
+		"functions": 80,
+		"branches": 80
 	}
-  }
+}
