--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"type": "git",
 		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
 	},
-	"license": "LGPL-3.0+",
+	"license": "MIT",
 	"version": "1.1.10-alpha.2",
 	"main": "dist/index.js",
 	"engines": {
