--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"type": "git",
 		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
 	},
-	"license": "LGPL-3.0+",
-	"version": "1.1.9",
+	"license": "MIT",
+	"version": "1.1.10-alpha.3",
 	"main": "dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -36,25 +36,25 @@
 		"dev:debug": "cross-env LOG_LEVEL=debug DEBUG=@natlibfi/* NODE_ENV=test nodemon"
 	},
 	"dependencies": {
-		"@natlibfi/fixugen": "^2.0.2",
-		"@natlibfi/fixura": "^3.0.2",
+		"@natlibfi/fixugen": "^2.0.5",
+		"@natlibfi/fixura": "^3.0.4",
 		"chai-http": "^4.4.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.23.0",
-		"@babel/core": "^7.23.2",
-		"@babel/node": "^7.22.19",
-		"@babel/preset-env": "^7.23.2",
-		"@babel/register": "^7.22.15",
-		"@natlibfi/eslint-config-melinda-backend": "^3.0.2",
+		"@babel/cli": "^7.24.5",
+		"@babel/core": "^7.24.5",
+		"@babel/node": "^7.23.9",
+		"@babel/preset-env": "^7.24.5",
+		"@babel/register": "^7.23.7",
+		"@natlibfi/eslint-config-melinda-backend": "^3.0.5",
 		"babel-plugin-istanbul": "^6.1.1",
-		"chai": "^4.3.10",
+		"chai": "^4.4.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.51.0",
-		"express": "^4.18.2",
-		"mocha": "^10.2.0",
+		"eslint": "^8.57.0",
+		"express": "^4.19.2",
+		"mocha": "^10.4.0",
 		"node-fetch": "^2.7.0",
-		"nodemon": "^3.0.1",
+		"nodemon": "^3.1.0",
 		"nyc": "^15.1.0"
 	},
 	"eslintConfig": {
