--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
 	},
 	"license": "MIT",
-	"version": "1.1.10",
+	"version": "1.1.11-alpha.1",
 	"main": "dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -37,7 +37,7 @@
 	},
 	"dependencies": {
 		"@natlibfi/fixugen": "^2.0.5",
-		"@natlibfi/fixura": "^3.0.4",
+		"@natlibfi/fixura": "^3.0.5",
 		"chai-http": "^4.4.0"
 	},
 	"devDependencies": {
