--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
 	},
 	"license": "MIT",
-	"version": "1.1.13",
+	"version": "1.1.14-alpha.1",
 	"main": "dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -53,7 +53,6 @@
 		"eslint": "^8.57.0",
 		"express": "^4.19.2",
 		"mocha": "^10.7.3",
-		"node-fetch": "^2.7.0",
 		"nodemon": "^3.1.4",
 		"nyc": "^17.0.0"
 	},
