--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
 	},
 	"license": "MIT",
-	"version": "1.1.16",
+	"version": "1.1.17-alpha.1",
 	"main": "dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -36,23 +36,23 @@
 		"dev:debug": "cross-env LOG_LEVEL=debug DEBUG=@natlibfi/* NODE_ENV=test nodemon"
 	},
 	"dependencies": {
-		"@natlibfi/fixugen": "^2.0.10",
-		"@natlibfi/fixura": "^3.0.10",
+		"@natlibfi/fixugen": "^2.0.12",
+		"@natlibfi/fixura": "^3.0.11",
 		"chai-http": "^4.4.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.25.7",
-		"@babel/core": "^7.25.7",
-		"@babel/node": "^7.25.7",
-		"@babel/preset-env": "^7.25.7",
-		"@babel/register": "^7.25.7",
+		"@babel/cli": "^7.25.9",
+		"@babel/core": "^7.26.0",
+		"@babel/node": "^7.26.0",
+		"@babel/preset-env": "^7.26.0",
+		"@babel/register": "^7.25.9",
 		"@natlibfi/eslint-config-melinda-backend": "^3.0.5",
 		"babel-plugin-istanbul": "^7.0.0",
 		"chai": "^4.5.0",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.57.1",
 		"express": "^4.21.1",
-		"mocha": "^10.7.3",
+		"mocha": "^10.8.2",
 		"nodemon": "^3.1.7",
 		"nyc": "^17.1.0"
 	},
