--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
 	},
 	"license": "MIT",
-	"version": "1.1.19-alpha.1",
+	"version": "1.1.19",
 	"main": "dist/index.js",
 	"engines": {
 		"node": ">=18"
