--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
 	},
 	"license": "MIT",
-	"version": "1.1.20",
+	"version": "1.1.22-alpha",
 	"main": "dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -41,10 +41,10 @@
 		"chai-http": "^4.4.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.27.2",
-		"@babel/core": "^7.27.4",
-		"@babel/node": "^7.27.1",
-		"@babel/preset-env": "^7.27.2",
+		"@babel/cli": "^7.28.0",
+		"@babel/core": "^7.28.0",
+		"@babel/node": "^7.28.0",
+		"@babel/preset-env": "^7.28.0",
 		"@babel/register": "^7.27.1",
 		"@natlibfi/eslint-config-melinda-backend": "^3.0.6",
 		"babel-plugin-istanbul": "^7.0.0",
