--- a/package.json
+++ b/package.json
@@ -16,99 +16,35 @@
 	"license": "MIT",
 	"version": "1.1.22",
 	"main": "dist/index.js",
+	"type": "module",
 	"engines": {
-		"node": ">=18"
+		"node": ">=22"
 	},
 	"publishConfig": {
 		"access": "public"
 	},
 	"scripts": {
 		"prepare": "npm run build",
-		"build": "babel src --source-maps --copy-files --delete-dir-on-start --out-dir=dist",
+		"build": "esbuild src/**/*.js --sourcemap --platform=node --main-fields=main --outdir=dist --allow-overwrite --analyze",
 		"lint": "eslint ./src",
 		"lint:dev": "eslint --fix ./src",
 		"test": "npm run lint && npm run test:base",
-		"test:base": "cross-env NODE_ENV=test nyc mocha --package ./package.json",
-		"test:dev": "npm run lint:dev && npm run test:base",
-		"coverage": "nyc check-coverage --per-file",
-		"watch:test": "cross-env DEBUG=@natlibfi/* NODE_ENV=test nodemon",
-		"dev": "nodemon",
-		"dev:debug": "cross-env LOG_LEVEL=debug DEBUG=@natlibfi/* NODE_ENV=test nodemon"
+		"test:base": "node --test --experimental-test-coverage --test-reporter=spec './src/*.test.js'",
+		"watch:test": "cross-env DEBUG=@natlibfi/* NODE_ENV=test node --watch --test --experimental-test-coverage --test-reporter=spec './src/*.test.js'",
+		"dev": "npm run watch:test",
+		"dev:debug": "cross-env LOG_LEVEL=debug DEBUG=@natlibfi/* NODE_ENV=test npm run watch:test"
 	},
 	"dependencies": {
-		"@natlibfi/fixugen": "^2.0.15",
-		"@natlibfi/fixura": "^3.0.14",
-		"chai-http": "^4.4.0"
+		"@natlibfi/fixugen": "^3.0.0-alpha.5",
+		"@natlibfi/fixura": "^4.0.0-alpha.12",
+		"chai": "^5.3.1",
+		"chai-http": "^5.1.2",
+		"debug": "^4.4.1"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.28.0",
-		"@babel/core": "^7.28.0",
-		"@babel/node": "^7.28.0",
-		"@babel/preset-env": "^7.28.0",
-		"@babel/register": "^7.27.1",
-		"@natlibfi/eslint-config-melinda-backend": "^3.0.6",
-		"babel-plugin-istanbul": "^7.0.0",
-		"chai": "^4.5.0",
-		"cross-env": "^7.0.3",
-		"eslint": "^8.57.1",
-		"express": "^4.21.2",
-		"mocha": "^11.7.1",
-		"nodemon": "^3.1.10",
-		"nyc": "^17.1.0"
-	},
-	"eslintConfig": {
-		"extends": "@natlibfi/melinda-backend"
-	},
-	"babel": {
-		"presets": [
-			[
-				"@babel/preset-env",
-				{
-					"targets": "maintained node versions"
-				}
-			]
-		],
-		"env": {
-			"test": {
-				"plugins": [
-					"istanbul"
-				]
-			}
-		}
-	},
-	"mocha": {
-		"spec": [
-			"src/*.spec.js",
-			"src/**/*.spec.js"
-		],
-		"require": [
-			"@babel/register"
-		],
-		"inline-diffs": true,
-		"maxDiffSize": 25000,
-		"bail": true,
-		"exit": true
-	},
-	"nodemonConfig": {
-		"exec": "npm run test:dev",
-		"watch": [
-			"src/*",
-			"test-fixtures/*"
-		]
-	},
-	"nyc": {
-		"exclude": [
-			"src/*.spec.js",
-			"src/**/*.spec.js"
-		],
-		"reporter": [
-			"text"
-		],
-		"sourceMap": false,
-		"instrument": false,
-		"lines": 80,
-		"statements": 80,
-		"functions": 80,
-		"branches": 80
+		"cross-env": "^10.0.0",
+		"esbuild": "^0.25.9",
+		"eslint": "^9.33.0",
+		"express": "^5.1.0"
 	}
 }
