--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
 	},
 	"license": "MIT",
-	"version": "1.1.22",
+	"version": "2.0.0-alpha.1",
 	"main": "dist/index.js",
 	"type": "module",
 	"engines": {
