--- a/.github/workflows/melinda-node-tests-and-publish.yml
+++ b/.github/workflows/melinda-node-tests-and-publish.yml
@@ -1,6 +1,6 @@
 # Melinda node tests
 
-name: Melinda node tests
+name: Melinda node tests and publish
 
 on: push
 
@@ -18,7 +18,7 @@ jobs:
     - name: Checkout the code
       uses: actions/checkout@v5
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+      uses: actions/setup-node@v6
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
@@ -32,7 +32,7 @@ jobs:
   license-scan:
     name: License compliance check
     runs-on: ubuntu-latest
-    container: docker://node:22
+    container: node:22
 
     steps:
       - uses: actions/checkout@v5
@@ -43,7 +43,7 @@ jobs:
   njsscan:
     name: Njsscan check
     runs-on: ubuntu-latest
-    container: docker://node:22
+    container: node:22
 
     steps:
     - name: Checkout the code
@@ -56,17 +56,27 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
+    container: node:22
     needs: [build-node-versions, njsscan]
     if: contains(github.ref, 'refs/tags/')
 
     steps:
       - uses: actions/checkout@v5
       # Setup .npmrc file to publish to npm
-      - uses: actions/setup-node@v4
+      - name: Prepare node for publish
+        uses: actions/setup-node@v6
         with:
           node-version: '22.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: npm ci
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.FIXUGEN_HTTP_SERVER_NPM_TOKEN }}
+      - name: Update npm
+        run: npm install -g npm@latest
+      - name: Clean install
+        run: npm ci
+      # Publish stable release with --tag latest
+      - name: Publish stable release
+        if: ${{!contains(github.ref, '-alpha')}}
+        run: npm publish --tag=latest
+      # Publish pre-release without --tag latest
+      - name: Publish pre-release
+        if: contains(github.ref, '-alpha')
+        run: npm publish --tag=next
