--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
 		"name": "The National Library of Finland"
 	},
 	"keywords": [],
-	"homepage": "https://github.com/natlibfi/fixugen-http-server-js",
+	"homepage": "https://www.npmjs.com/package/@natlibfi/fixugen-http-server",
 	"bugs": {
 		"url": "https://github.com/natlibfi/fixugen-http-server-js/issues"
 	},
 	"repository": {
-		"type": "git",
-		"url": "git@github.com:natlibfi/fixugen-http-server-js.git"
+		"url": "https://github.com/NatLibFi/fixugen-http-server-js"
 	},
 	"license": "MIT",
 	"version": "2.0.0-alpha.1",
