--- a/.github/workflows/melinda-node-tests-and-publish.yml
+++ b/.github/workflows/melinda-node-tests-and-publish.yml
@@ -4,6 +4,10 @@ name: Melinda node tests and publish
 
 on: push
 
+permissions:
+  id-token: write  # Required for OIDC
+  contents: read
+
 jobs:
   build-node-versions:
     name: Node version matrix
