--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
 		"dev:debug": "cross-env LOG_LEVEL=debug DEBUG=@natlibfi/* NODE_ENV=test npm run watch:test"
 	},
 	"dependencies": {
-		"@natlibfi/fixugen": "^3.0.0-alpha.5",
-		"@natlibfi/fixura": "^4.0.0-alpha.12",
-		"debug": "^4.4.1"
+		"@natlibfi/fixugen": "^3.0.0",
+		"@natlibfi/fixura": "^4.0.0",
+		"debug": "^4.4.3"
 	},
 	"devDependencies": {
-		"cross-env": "^10.0.0",
-		"esbuild": "^0.25.9",
-		"eslint": "^9.34.0",
+		"cross-env": "^10.1.0",
+		"esbuild": "^0.25.12",
+		"eslint": "^9.39.1",
 		"express": "^5.1.0"
 	}
 }
