--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"url": "https://github.com/NatLibFi/fixugen-http-server-js"
 	},
 	"license": "MIT",
-	"version": "2.0.0-alpha.3",
+	"version": "2.0.0",
 	"main": "dist/index.js",
 	"type": "module",
 	"engines": {
