--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"url": "https://github.com/NatLibFi/fixugen-http-server-js"
 	},
 	"license": "MIT",
-	"version": "2.0.1",
+	"version": "2.0.2-alpha.1",
 	"main": "dist/index.js",
 	"type": "module",
 	"engines": {
@@ -40,8 +40,8 @@
 	},
 	"devDependencies": {
 		"cross-env": "^10.1.0",
-		"esbuild": "^0.25.12",
-		"eslint": "^9.39.1",
-		"express": "^5.1.0"
+		"esbuild": "^0.27.2",
+		"eslint": "^9.39.2",
+		"express": "^5.2.1"
 	}
 }
